# simple-sqlite3-orm

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  dependabot.yml  release.yml  renovate-config.json
.github/workflows/: release.yaml  renovate.yaml  test.yaml
src/simple_sqlite3_orm/: __init__.py  _db.py  _orm.py  _sqlite_spec.py  _table_spec.py  _types.py  _typing.py  _utils.py  orm.py  query_composer.py  types.py  utils.py
src/simple_sqlite3_orm/_orm/: __init__.py  _async.py  _base.py  _multi_thread.py  _pool.py  _utils.py
tests/: conftest.py  test__orm.py  test__table_spec.py  test__types.py  test__utils.py  test_asyncio.py  test_threadpool.py  test_utils.py  test_with_sample_db.py
tests/container/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
tests/sample_db/: _types.py  db.py  orm.py  table.py
tests/test_e2e/: conftest.py  test_async_orm.py  test_asyncio.py  test_orm.py  test_threadpool.py  test_threadpool_orm.py  test_with_sample_db.py
