[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling>=1.20" ]

[project]
name = "simple-sqlite3-orm"
description = "A simple yet powerful SQLite3 ORM, powered by pydantic."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "pga2rn", email = "aaronpigybd@gmail.com" } ]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [ "pydantic>=2.6,<3", "typing-extensions>=4" ]
optional-dependencies.dev = [
  "coverage>=7.6,<7.7",
  "pytest>=8.3,<8.4",
  "pytest-asyncio>=0.24,<0.26",
  "pytest-mock>=3.14,<3.15",
  "ruff>=0.6,<0.10",
]

urls.Source = "https://github.com/pga2rn/simple-sqlite3-orm"
urls.Tracker = "https://github.com/pga2rn/simple-sqlite3-orm/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "class"
log_auto_indent = true
log_format = "%(asctime)s %(levelname)s %(filename)s %(funcName)s,%(lineno)d %(message)s"
log_cli = true
log_cli_level = "INFO"
pythonpath = [ "src" ]
testpaths = [ "./tests" ]

[tool.coverage.run]
omit = [ "_version.py" ]
branch = false
relative_files = true
source = [ "simple_sqlite3_orm" ]

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "if cfg.DEBUG_MODE",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = true
skip_empty = true
